updating links in header and footer

--- a/locales/en.json
+++ b/locales/en.json
@@ -324,33 +324,27 @@
         "contact": "Contact",
         "contactsupport": "Contact support",
         "contactsales": "Contact sales",
-        "callsales": "Call sales",
-
-        "whatwedo": "What we do",
-        "pricing": "Pricing",
-        "overview": "Overview",
-        "featurestour": "Features tour",
-        "casestudies": "Case studies",
-
-        "community": "Community",
-        "blog": "Blog",
-        "mailinglist": "Mailing list",
-        "sourcecode": "Source code",
-        "events": "Events",
-        "communitywebsite": "Community website",
-
-        "support": "Support",
-        "helpcenter": "Help center",
-        "systemstatus": "System status",
-        "videos": "Videos",
-        "developers": "Developers",
+        "callsales": "Sales: ",
 
         "aboutus": "About us",
-        "ourteam": "Our team",
-        "electionauthorities": "Election authorities",
+        "pricing": "Pricing",
+        "technology": "Technology",
+        "solutions": "Solutions",
+        "adminManual": "Admin Manual",
+
+        "electionTypes": "Election types",
+        "primaries": "Primaries and candidate elections",
+        "participatoryBudgeting": "Participatory budgeting",
+        "referendums": "referendums and consultations",
+        "professional": "Professionals and Labor Unions",
+        "universities": "Universities",
+
+        "legal": "Legal",
         "tos": "Term of service",
-        "presscenter": "Press center",
-        "privacy": "Privacy & security"
+        "cookies": "Cookies policy",
+        "privacy": "Privacy policy",
+        "securitycontact": "Security Contact",
+        "communitywebsite": "Community Website"
     },
     "sidebar": {
         "elections": "Elections",
