--- a/locales/gl.json
+++ b/locales/gl.json
@@ -314,33 +314,27 @@
         "contact": "Contacto",
         "contactsupport": "Contacto de soporte",
         "contactsales": "Contacto de ventas",
-        "callsales": "Chamar a ventas",
-
-        "whatwedo": "Qué facemos",
-        "pricing": "Prezos",
-        "overview": "Resume",
-        "featurestour": "Tour de funcionalidade",
-        "casestudies": "Casos de estudo",
-
-        "community": "Comunidade",
-        "blog": "Blog",
-        "mailinglist": "Lista de correo",
-        "sourcecode": "Código fonte",
-        "events": "Eventos",
-        "communitywebsite": "Web de comunidade",
-
-        "support": "Soporte",
-        "helpcenter": "Help center",
-        "systemstatus": "Estado do sistema",
-        "videos": "Vídeos",
-        "developers": "Desenvolvedores",
+        "callsales": "Ventas:",
 
         "aboutus": "Acerca de",
-        "ourteam": "O noso equipo",
-        "electionauthorities": "Autoridades de votación",
-        "tos": "Términos do servicio",
-        "presscenter": "Centro de prensa",
-        "privacy": "Privacidade y seguridade"
+        "pricing": "Prezos",
+        "technology": "Tecnología",
+        "solutions": "Soluciones",
+        "adminManual": "Manual de admin",
+
+        "electionTypes": "Tipos de votación",
+        "primaries": "Primarias y elecciones de candidatos",
+        "participatoryBudgeting": "Presupuestos participativos",
+        "referendums": "Referéndums y consultas",
+        "professional": "Elecciones profesionales y sindicales",
+        "universities": "Universidades",
+
+        "legal": "Legal",
+        "tos": "Condiciones de uso",
+        "cookies": "Política de Cookies",
+        "privacy": "Política de Privacidad",
+        "securitycontact": "Contacto de seguridad",
+        "communitywebsite": "Sitio web del proyecto"
     },
     "sidebar": {
         "elections": "Votacións",
