--- a/locales/en.json
+++ b/locales/en.json
@@ -66,6 +66,8 @@
     "selectMoreOpts": "Select at least __min__ options.",
     "selectMoreOpts_plural": "Select at least __min__ options.",
     "maxSelectedLimitReached": "Maximum number of selected options reached (__max__). To select an option, deselect another first.",
+    "maxSelectedLimitTagReached": "No puedes seleccionar más candidaturas de tipo __tagName__ (máximo __max__). Para seleccionar una, deselecciona otra primero.",
+    "maxSelectedLimitNoTagReached": "No puedes seleccionar más candidaturas que no sean __tagName__ (máximo __max__). Para seleccionar una, deselecciona otra primero.",
     "alreadySelectedDocumentType": "You can't select two documents of the same type - deselect it first.",
     "alreadySelectedPack": "Seleccionaste una opción vinculada a otros documentos más. No es posible seleccionarlo de forma aislada.",
     "cantSelectPack": "Intentaste seleccionar una opción vinculada que no se puede seleccionar de forma aislada, y ya tienes otra seleccionada.",
