--- a/locales/es.json
+++ b/locales/es.json
@@ -66,7 +66,8 @@
     "selectMoreOpts": "Debes seleccionar al menos __min__ candidaturas.",
     "selectMoreOpts_plural": "Debes seleccionar al menos __min__ candidaturas.",
     "maxSelectedLimitReached": "No puedes seleccionar más candidaturas (máximo __max__). Para seleccionar una opción, deselecciona otra primero.",
-    "maxSelectedTagLimitReached": "No puedes seleccionar más candidaturas de tipo __tagName__ (máximo __max__). Para seleccionar una, deselecciona otra primero.",
+    "maxSelectedLimitTagReached": "No puedes seleccionar más candidaturas de tipo __tagName__ (máximo __max__). Para seleccionar una, deselecciona otra primero.",
+    "maxSelectedLimitNoTagReached": "No puedes seleccionar más candidaturas que no sean __tagName__ (máximo __max__). Para seleccionar una, deselecciona otra primero.",
     "alreadySelectedDocumentType": "No puedes seleccionar dos documentos del mismo tipo, deselecciónalo primero antes.",
     "alreadySelectedPack": "Seleccionaste una opción vinculada a otros documentos más. No es posible seleccionarlo de forma aislada.",
     "cantSelectPack": "Intentaste seleccionar una opción vinculada que no se puede seleccionar de forma aislada, y ya tienes otra seleccionada.",
