--- a/locales/ca.json
+++ b/locales/ca.json
@@ -1,18 +1,18 @@
 {
   "eg": "ej.",
-  "next": "Siguiente",
-  "done": "Hecho",
-  "loading": "Cargando...",
-  "nomore": "No hay más elementos",
+  "next": "Següent",
+  "done": "Fet",
+  "loading": "Carregant...",
+  "nomore": "No hi ha més elements",
   "registered": "registrada",
   "created": "creada",
-  "started": "comenzada",
-  "stopped": "detenida",
-  "tally_ok": "recuento realizado",
-  "results_ok": "resultados",
-  "results_pub": "resultados publicados",
-  "doing_tally": "haciendo el recuento",
-  "tally_error": "error en el recuento",
+  "started": "començada",
+  "stopped": "parada",
+  "tally_ok": "recompte realitzat",
+  "results_ok": "resultats",
+  "results_pub": "resultats publicats",
+  "doing_tally": "fent el recompte",
+  "tally_error": "error al recompte",
 
   "app": {
     "name": "Agora Voting"
@@ -30,7 +30,7 @@
     "reviewOptionsTitle": "2. Revisa la teva papereta",
     "reviewOptionsText": "Un cop hagis escollit les teves candidatures, les xifrarem i obtindràs un  un localitzador. Et mostrarem el contingut de la teva papereta perquè puguis revisar-la.",
     "emitBallotTitle": "3. Envia el teu vot",
-    "emitBallotText": "Pots enviar el teu vot a la urna electrònica perquè sigui degudament  registrat. Alternativament, pots auditar que el teu vot ha estat xifrat correctament.",
+    "emitBallotText": "Ja pots enviar el teu vot a l'urna electrònica perquè sigui registrat. Alternativament, pots auditar que el teu vot ha estat xifrat correctament.",
 
     "errorTitle": "Ups. Ha passat alguna cosa inesperada",
     "errorHtml": "<p>Hi ha hagut el problema següent (identificador __errorId__): </p><p>__error__</p><p>En cas que creguis que has de contactar amb nosaltres, pots fer-ho enviant-nos un correu electrònic a <a href=\"mailto:__email__\" target=\"_blank\">__email__</a>.</p>",
@@ -53,7 +53,7 @@
     "questionAvailableOptionsTitle": "candidatures disponibles",
     "numOptionsSelected": "__count__ candidatures seleccionades.",
     "numOptionsSelected_plural": "__count__ candidatures seleccionades.",
-    "noOptionsSelected": "Ninguna opció seleccionada.",
+    "noOptionsSelected": "Cap opció seleccionada.",
     "numOptionsLimits": "Selecciona entre __min__ i __max__ candidatures.",
     "filterOptionsPlaceholder": "filtra..",
     "noResults": "el filtre no ha produït resultats.",
