--- a/locales/gl.json
+++ b/locales/gl.json
@@ -348,6 +348,7 @@
         "questions": "Preguntas",
         "censusConfig": "Configuración Censal",
         "census": "Datos censais",
+        "successAction": "Acción al entrar",
         "auth": "Autenticación",
         "tally": "Reconto",
         "create": "Crear Votación",
@@ -625,38 +626,51 @@
         "creatingEl": "Creando a votación (ide: __ide__) __title__",
         "logHeader": "Log",
         "errors": {
-          "election-is-array-questions": "Votación '__eltitle__': a lista de pregunta non é un array",
-          "election-array-length-min-questions": "Votación '__eltitle__': debe haber polo menos __min__ preguntas, pero só hai  __num__",
-          "election-array-length-max-questions": "Votación '__eltitle__': debe haber como moito __max__ preguntas, pero hai __num__",
-          "election-question-is-array-answers": "Votación '__eltitle__': a lista de candidaturas non é un array",
+          "election-is-array-questions": "Votación '__eltitle__': la lista de pregunta no es un array",
+          "election-lambda-success-action-url-mode": "Votación '__eltitle__': url de redirección en 'Acción de éxito' inválida",
+          "election-array-length-min-questions": "Votación '__eltitle__': debe haber al menos __min__ preguntas, pero solo hay  __num__",
+          "election-array-length-max-questions": "Votación '__eltitle__': debe haber como mucho __max__ preguntas, pero hay __num__",
+          "election-question-is-array-answers": "Votación '__eltitle__': la lista de candidaturas no es un array",
 
-          "election-array-length-max-description": "Votación '__eltitle__': a descrición ten unha lonxitude de __num__ caracteres, excedendo o máximo de __max__ caracteres",
-          "election-is-string-description": "Votación '__eltitle__': a descrición non é unha cadea de texto",
-          "election-array-length-max-title": "Votación '__eltitle__': o título ten unha lonxitude de __num__ caracteres, excedendo o máximo de __max__ caracteres",
-          "election-is-string-title": "Votación '__eltitle__': o título non é unha cadea de texto",
-          "election-question-array-length-max-description": "Votación '__eltitle__', pregunta '__qtitle__': a descrición ten unha lonxitude de __num__ caracteres, excedendo o máximo de __max__ caracteres",
-          "election-question-is-string-description": "Votación '__eltitle__', pregunta '__qtitle__': a descrición non é unha cadea de texto",
-          "election-question-array-length-max-title": "Votación '__eltitle__', pregunta '__qtitle__': o título ten unha lonxitude de __num__ caracteres, excedendo o máximo de __max__ caracteres",
-          "election-question-is-string-title": "Votación '__eltitle__', pregunta '__qtitle__': o título non é unha cadea de texto",
-          "election-question-answer-array-length-max-text": "Votación '__eltitle__', pregunta '__qtitle__', candidatura '__atext__': o texto ten unha lonxitude de __num__ caracteres, excedendo o máximo de __max__ caracteres",
-          "election-question-answer-is-string-description": "Votación '__eltitle__', pregunta '__qtitle__', candidatura '__atext__': a descrición non é unha cadea de texto",
-          "election-question-answer-array-length-min-text": "Votación '__eltitle__', pregunta '__qtitle__', candidatura '__atext__': o texto ten unha lonxitude de __num__ caracteres, pero debe ter polo menos __min__ caracteres",
-          "election-question-answer-is-string-text": "Votación '__eltitle__', pregunta '__qtitle__', candidatura '__atext__': o texto non é unha cadea de texto",
-          "election-question-answer-array-length-max-description": "Votación '__eltitle__', pregunta '__qtitle__', candidatura '__atext__': a descrición ten unha lonxitude de __num__ caracteres, excedendo o máximo de __max__ caracteres",
-          "election-question-answer-array-length-max-category": "Votación '__eltitle__', pregunta '__qtitle__', candidatura '__atext__': a categoría ten unha lonxitude de __num__ caracteres, excedendo o máximo de __max__ caracteres",
-          "election-question-answer-is-string-category": "Votación '__eltitle__', pregunta '__qtitle__', candidatura '__atext__': a categoría non é unha cadea de texto",
-          "election-question-is-int-min": "Votación '__eltitle__', pregunta '__qtitle__': o mínimo número de candidaturas que pode seleccionar un votante non é un número enteiro",
-          "election-question-is-int-max": "Votación '__eltitle__', pregunta '__qtitle__': o máximo número de candidaturas que pode seleccionar un votante non é un número enteiro",
-          "election-question-is-int-num-winners": "Votación '__eltitle__', pregunta '__qtitle__': o número de gañadores non é un número enteiro",
-          "election-question-array-length-min-answers": "Votación '__eltitle__', pregunta '__qtitle__': debe haber polo menos  __min__ candidaturas, pero só hai __num__",
-          "election-question-array-length-max-answers": "Votación '__eltitle__', pregunta '__qtitle__': debe haber como moito __max__ candidaturas, pero hai __num__",
-          "election-question-int-size-min-min": "Votación '__eltitle__', pregunta '__qtitle__': o mínimo número de candidaturas que pode seleccionar un votante debe ser un número positivo, pero é __value__",
-          "election-question-int-size-max-min": "Votación '__eltitle__', pregunta '__qtitle__': o mínimo número de candidaturas que pode seleccionar un votante é __value__, pero non debe ser maior que o máximo, que é __max__",
-          "election-question-int-size-min-max": "Votación '__eltitle__', pregunta '__qtitle__': o máximo número de candidaturas que pode seleccionar un votante é __value__, pero debe ser maior ou igual que o mínimo, que é __min__",
-          "election-question-int-size-max-max": "Votación '__eltitle__', pregunta '__qtitle__': o máximo número de candidaturas que pode seleccionar un votante é __value__, pero non debe ser maior que o número total de candidaturas, que é __max__",
-          "election-question-int-size-min-num-winners": "Votación '__eltitle__', pregunta '__qtitle__': debe haber polo menos un gañador, pero hai __value__",
-          "election-question-int-size-max-num-winners": "Votación '__eltitle__', pregunta '__qtitle__': o número de gañadores é __value__, pero non pode ser maior que o número total de candidaturas, que é __max__"
+          "election-array-length-max-description": "Votación '__eltitle__': la descripción tiene una longitud de __num__ caracteres, sobrepasando el máximo de __max__ caracteres",
+          "election-is-string-description": "Votación '__eltitle__': la descripción no es una cadena de texto",
+          "election-array-length-max-title": "Votación '__eltitle__': el título tiene una longitud de __num__ caracteres, sobrepasando el máximo de __max__ caracteres",
+          "election-is-string-title": "Votación '__eltitle__': el título no es una cadena de texto",
+          "election-question-array-length-max-description": "Votación '__eltitle__', pregunta '__qtitle__': la descripción tiene una longitud de __num__ caracteres, sobrepasando el máximo de __max__ caracteres",
+          "election-question-is-string-description": "Votación '__eltitle__', pregunta '__qtitle__': la descripción no es una cadena de texto",
+          "election-question-array-length-max-title": "Votación '__eltitle__', pregunta '__qtitle__': el título tiene una longitud de __num__ caracteres, sobrepasando el máximo de __max__ caracteres",
+          "election-question-is-string-title": "Votación '__eltitle__', pregunta '__qtitle__': el título no es una cadena de texto",
+          "election-question-answer-array-length-max-text": "Votación '__eltitle__', pregunta '__qtitle__', candidatura '__atext__': el texto tiene una longitud de __num__ caracteres, sobrepasando el máximo de __max__ caracteres",
+          "election-question-answer-is-string-description": "Votación '__eltitle__', pregunta '__qtitle__', candidatura '__atext__': la descripción no es una cadena de texto",
+          "election-question-answer-array-length-min-text": "Votación '__eltitle__', pregunta '__qtitle__', candidatura '__atext__': el texto tiene una longitud de __num__ caracteres, pero debe tener al menos __min__ caracteres",
+          "election-question-answer-is-string-text": "Votación '__eltitle__', pregunta '__qtitle__', candidatura '__atext__': el texto no es una cadena de texto",
+          "election-question-answer-array-length-max-description": "Votación '__eltitle__', pregunta '__qtitle__', candidatura '__atext__': la descripción tiene una longitud de __num__ caracteres, sobrepasando el máximo de __max__ caracteres",
+          "election-question-answer-array-length-max-category": "Votación '__eltitle__', pregunta '__qtitle__', candidatura '__atext__': la categoría tiene una longitud de __num__ caracteres, sobrepasando el máximo de __max__ caracteres",
+          "election-question-answer-is-string-category": "Votación '__eltitle__', pregunta '__qtitle__', candidatura '__atext__': la categoría no es una cadena de texto",
+          "election-question-is-int-min": "Votación '__eltitle__', pregunta '__qtitle__': el mínimo número de candidaturas que puede seleccionar un votante no es un número entero",
+          "election-question-is-int-max": "Votación '__eltitle__', pregunta '__qtitle__': el máximo número de candidaturas que puede seleccionar un votante no es un número entero",
+          "election-question-is-int-num-winners": "Votación '__eltitle__', pregunta '__qtitle__': el número de ganadores no es un número entero",
+          "election-question-array-length-min-answers": "Votación '__eltitle__', pregunta '__qtitle__': debe haber al menos  __min__ candidaturas, pero solo hay __num__",
+          "election-question-array-length-max-answers": "Votación '__eltitle__', pregunta '__qtitle__': debe haber como mucho __max__ candidaturas, pero hay __num__",
+          "election-question-int-size-min-min": "Votación '__eltitle__', pregunta '__qtitle__': el mínimo número de candidaturas que puede seleccionar un votante debe ser un número positivo, pero es __value__",
+          "election-question-int-size-max-min": "Votación '__eltitle__', pregunta '__qtitle__': el mínimo número de candidaturas que puede seleccionar un votante es __value__, pero no debe ser mayor que el máximo, que es __max__",
+          "election-question-int-size-min-max": "Votación '__eltitle__', pregunta '__qtitle__': el máximo número de candidaturas que puede seleccionar un votante es __value__, pero debe ser mayor o igual que el mínimo, que es __min__",
+          "election-question-int-size-max-max": "Votación '__eltitle__', pregunta '__qtitle__': el máximo número de candidaturas que puede seleccionar un votante es __value__, pero no debe ser mayor que el número total de candidaturas, que es __max__",
+          "election-question-int-size-min-num-winners": "Votación '__eltitle__', pregunta '__qtitle__': debe haber al menos un ganador, pero hay __value__",
+          "election-question-int-size-max-num-winners": "Votación '__eltitle__', pregunta '__qtitle__': el número de ganadores es __value__, pero no puede ser mayor que el número total de candidaturas, que es __max__"
         }
+    },
+
+    "successAction": {
+      "modeIntro": "Once an user registers or authenticates, an action should be executed. Usually, it's redirected to the corresponding election voting booth, but it can also be configured to load an external url. This is useful if you are using this  just to register census and not for any active election.",
+
+      "voteModeTitle": "Load the election's voting booth",
+      "voteModeDescription": "Load the corresponding the corresponding election voting booth so that the person can vote.",
+
+      "urlModeTitle": "Redirect to URL",
+      "urlModeDescription": "Load an URL that you can specify:",
+      "urlModePlaceholder": "https://example.com/foo/bar",
+      "invalidUrl": "Invalid url. Example of a valid URL: https://example.com/foo/bar"
     }
   }
 }
